# digital-chintu

./: .env.example  .gitignore  ARCHITECTURE_REVIEW_REPORT.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPENDENCY_GRAPH.md  DEVELOPMENT.md  LICENSE  Makefile  PROJECT_STATUS.md  README.md  REPO_HEALTH_REPORT.md  ROADMAP.md  docker-compose.yml
.claude/: launch.json
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_create_settings_table.py
backend/app/: main.py
backend/app/api/v1/: deps.py  router.py
backend/app/api/v1/endpoints/: __init__.py  config.py  health.py  plugins.py  settings.py  stt.py  wake_word.py
backend/app/core/: config.py  logging.py  plugins.py  scheduler.py  validation.py
backend/app/core/voice/: audio.py  engine.py  events.py  runtime.py  stt_engine.py  stt_events.py  stt_runtime.py
backend/app/db/: base.py  models.py  session.py
backend/app/domain/: __init__.py  settings.py
backend/app/repositories/: __init__.py  settings_repository.py
backend/app/services/: __init__.py  settings_service.py
backend/tests/: conftest.py
backend/tests/fixtures/: README.md
backend/tests/integration/: test_config_api.py  test_health_api.py  test_plugins_api.py  test_settings_api.py  test_stt_api.py  test_wake_word_api.py
backend/tests/unit/: test_config.py  test_logging.py  test_migrations.py  test_plugins.py  test_scheduler.py  test_session.py  test_settings_repository.py  test_settings_service.py  test_stt_engine.py  test_stt_events.py  test_stt_runtime.py  test_validation.py  test_voice_events.py  test_voice_runtime.py
docker/: README.md
docs/Foundation/: 00_README.md  01_Project_Vision.md  02_System_Architecture.md  03_Repository_Structure.md  04_Tech_Stack.md  05_Coding_Standards.md  06_Docker_and_Deployment.md  07_CI_CD.md  08_Backend_Skeleton.md  09_Frontend_Skeleton.md  10_Master_Claude_Prompt.md
docs/SDS/: README.md
docs/architecture/: 01_SYSTEM_ARCHITECTURE.md  02_REPOSITORY_STRUCTURE.md  03_DATABASE_DESIGN.md  04_API_GUIDELINES.md  05_PLUGIN_SDK.md  06_SECURITY.md  07_DEPLOYMENT.md  08_TESTING_STRATEGY.md  (+2 more)
frontend-dashboard/: .dockerignore  Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend-mobile/: README.md
plugins/: README.md
scripts/: README.md  setup.ps1  setup.sh
shared/: README.md
tests/: README.md  global-setup.ts  package-lock.json  package.json  playwright.config.ts
(+172 files in other folders)
