[project]
name = "digital-chintu-backend"
version = "0.2.0"
description = "Digital Chintu backend — FastAPI application core."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.5,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "apscheduler>=3.10,<4.0",
    "alembic>=1.13,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "pytest-cov>=5.0,<6.0",
    "httpx>=0.27,<1.0",
    "ruff>=0.6,<1.0",
    "black>=24.8,<25.0",
    "mypy>=1.11,<2.0",
    "import-linter>=2.0,<3.0",
]
# Local voice pipeline (wake-word: docs/features/011_Wake_Word.md; speech-
# to-text: docs/features/012_Speech_To_Text.md) — deliberately NOT a base
# dependency. openwakeword/onnxruntime/pywhispercpp aren't guaranteed to
# have prebuilt wheels on every Raspberry Pi architecture, and sounddevice
# needs a native PortAudio library that doesn't exist in Docker/CI at all.
# The backend must boot and stay healthy with this group absent (see
# app/core/voice/) — install with `pip install '.[voice]'` on hardware
# that's been checked against docs/architecture/07_DEPLOYMENT.md's resource
# notes first.
voice = [
    "openwakeword>=0.6,<1.0",
    "onnxruntime>=1.18,<2.0",
    "sounddevice>=0.5,<1.0",
    "numpy>=1.26,<3.0",
    "pywhispercpp>=1.2,<2.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# B008 (function call in a default argument) is FastAPI's own Depends(...)
# idiom, required for its dependency injection to work — not a real bug.
ignore = ["B008"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra --cov=app --cov-report=term-missing"
testpaths = ["tests"]

[tool.importlinter]
root_package = "app"

[[tool.importlinter.contracts]]
name = "Clean Architecture layering: api -> services -> repositories -> domain"
type = "layers"
layers = [
    "app.api",
    "app.services",
    "app.repositories",
    "app.domain",
]
# app.core and app.db are cross-cutting infrastructure, importable by any
# layer above — deliberately not part of this ordering.
